--- a/port.html
+++ b/port.html
@@ -1,9 +1,10 @@
+    
 <!DOCTYPE html>
-<html lang="e">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Responsive Personal Portfolio Website with Theme Toggle and Form Validation</title>
+  <title>Responsive Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
@@ -53,38 +54,47 @@
 
   <main>
     <section id="home" class="hero py-5 text-center">
-      <h1>Welcome to My Portfolio</h1>
-      <p class="lead">Frontend Developer </p>
+      <h1>Welcome to My world</h1>
+      <p class="lead">Hi, I'm Bharathi Palyam a Front-End Developer </p>
     </section>
 
     <section id="about" class="py-5 container">
       <h2>About Me</h2>
-      <p>I am a passionate frontend developer with experience in building responsive and interactive web applications.</p>
+      <p>I am a passionate frontend developer with experience in building responsive and interactive web applications.
+        I Specialize in turing design ideas into fully functional web interfaces using technologies like:
+        <br>
+        * HTML, CSS, JavaScript
+        <br>
+        * React.js & bootstrap
+        <br>
+        * Responsive Design & cross-browser compatibility
+
+      </p>
     </section>
 
     <section id="projects" class="py-5 container">
-    <h2>Projects</h2>
-    <div class="row">
-    <div class="col-md-4">
-    <div class="card">
-    <div class="card-body">
-    <h5 class="card-title">Project 1</h5>
-    <p class="card-text">Short description of project 1.</p>
-    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#project1Modal">More Info</button>
-    </div>
-    </div>
-    </div>
-    <div class="col-md-4">
-    <div class="card">
-    <div class="card-body">
-    <h5 class="card-title">Project 2</h5>
-    <p class="card-text">Short description of project 2.</p>
-    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#project2Modal">More Info</button>
-    </div>
-    </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card">
+      <h2>Projects</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project 1</h5>
+              <p class="card-text">Short description of project 1.</p>
+              <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#project1Modal">More Info</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project 2</h5>
+              <p class="card-text">Short description of project 2.</p>
+              <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#project2Modal">More Info</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
             <div class="card-body">
               <h5 class="card-title">Project 3</h5>
               <p class="card-text">Short description of project 3.</p>
