--- a/index.html
+++ b/index.html
@@ -69,14 +69,20 @@
       margin-left: 1.5rem;
     }
 
-    footer {
-      background-color: #f8f9fa;
+        footer {
+      transition: color 0.3s ease;
     }
 
-    .dark-mode footer {
-      background-color: #2c2c2c;
-      color: #ccc;
+    body:not(.dark-mode) footer {
+      background-color: #f8f9fa; /* light theme */
+      color: black;
     }
+
+    body.dark-mode footer {
+      background-color: #212529; /* dark theme */
+      color: red;
+    }
+
 
     @media (max-width: 768px) {
       .hero {
@@ -93,7 +99,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
-    }
+ }
+
+
   </style>
 </head>
 
@@ -151,10 +159,12 @@
         <div class="col-md-4">
           <div class="card">
             <div class="card-body">
+              <div>
               <h5 class="card-title">🔷 1. Personal Portfolio <br>Website</h5>
 
               <p class="card-text">Responsive portfolio site with projects, skills, and theme toggle.</p>
               <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#project1Modal">More Info</button>
+              </div>
 
             </div>
           </div>
@@ -210,6 +220,7 @@
   <footer class="text-center py-4 bg-light mt-5">
     &copy; 2025 My Portfolio. All rights reserved.
   </footer>
+
 
   <!-- Project Modals -->
   <div class="modal fade" id="project1Modal" tabindex="-1" aria-labelledby="project1ModalLabel" aria-hidden="true">
